footer markup created and first media queries styles added

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ header {
 }
 
 .faq {
-  margin: 2rem;
+  margin: 5rem 2rem;
 }
 
 .section-heading {
@@ -166,4 +166,35 @@ header {
   margin: 0;
   padding: 10px 0;
   font-size: 1.3rem;
+}
+
+.footer {
+  background: #000;
+  height: 7rem;
+  color: #fff;
+  padding: 2rem;
+}
+
+.footer .flex-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer .logo {
+  color: red;
+}
+
+@media (min-width: 600px) {
+  .content-container .content h1 {
+    font-size: 5rem;
+  }
+
+  .content-container .content h3 {
+    font-size: 2.8rem;
+  }
+
+  .content-container .content p {
+    font-size: 2.5rem;
+  }
 }
